--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <h1>
        <span id="city"></span> <br />
-        <span id= "displayTime">Thursday <time>11:00</time> </span>
+        <span id= "date" >Thursday 11:00 </span>
       </h1>
       <h2 id = "description"></h2>
       <p id = "temperature" id="current-location"></p>
