--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <h1>
        <span id="city"></span> <br />
-        <span id= "date" >Thursday 11:00 </span>
+        <span id= "date" > </span>
       </h1>
       <h2 id = "description"></h2>
       <div id="mainIcon"><img id="icon" src="http://openweathermap.org/img/wn/10d@2x.png"></img> </div>
