--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <form id="search-form">
         <input type="text" placeholder="Enter City" autofocus="on" id= "search-text-input">
         <input type="submit" value="Search"> 
-        <button>Current</button>
+        <button id="geolocation">Current</button>
       </form> 
       
 
